--- a/atividade_08.html
+++ b/atividade_08.html
@@ -8,6 +8,10 @@
     >>nome ficticio - ok (Saúde Verde)
     >>usar componentes bootstrap
 
+    !!!!!!!!!!!!!!!!!!!
+    SITE DE REFERENCIA: https://camaraderia.com.br/category/cardapio/sobremesas/
+    !!!!!!!!!!!!!!!!!!!
+
     1. Página Inicial:
     Introdução: Uma mensagem de boas-vindas e uma breve visão geral do ambiente ou tema do restaurante.
     Imagens de Alta Qualidade: Destaque imagens do interior, exterior e pratos exclusivos do restaurante.
@@ -18,20 +22,72 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Saúde Verde</title>
-    
+
     <!-- Integração Bootstrap -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
         integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 
-        <!-- Integração CSS -->
+    <!-- Integração CSS -->
     <link rel="stylesheet" href="atividade_08.css">
 
-    
+
 </head>
 
 <body>
 
-    <h1>ola mundo</h1>
+    <!-- TESTE ESTRUTURA DO LIVRO -->
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container">
+            <a class="navbar-brand" href="#">Sáude Verde</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Início</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Sobre</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Serviços</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Contato</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+
+    <div class="alert alert-light" role="alert">
+        <h5>Ola!</h5>
+        <p>Seja muito bem vindo</p>
+    </div>
+
+
+    <!-- <div class="jumbotron">
+            <div class="container">
+                <h1 class="display-4">Bem-vindo ao Meu Site</h1>
+                <p class="lead">Oferecemos serviços e produtos incríveis.</p>
+                <a class="btn btn-primary btn-lg" href="#" role="button">Saiba mais</a>
+            </div>
+        </div>
+
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6">
+                    <h2>Nossos Serviços</h2>
+                    <p>Fornecemos uma ampla gama de serviços para atender às suas necessidades.</p>
+                </div>
+                <div class="col-md-6">
+                    <h2>Contate-nos</h2>
+                    <p>Sinta-se à vontade para entrar em contato conosco se tiver alguma dúvida ou consulta.</p>
+                </div>
+            </div>
+        </div> -->
 
     <!-- Integração Bootstrap -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
