--- a/atividade_08.html
+++ b/atividade_08.html
@@ -12,6 +12,10 @@
     SITE DE REFERENCIA: https://camaraderia.com.br/category/cardapio/sobremesas/
     !!!!!!!!!!!!!!!!!!!
 
+    !!!!!!!!!!!!!!!!!!!
+    CORES DE REFERENCIA: https://paletadecores.com/paleta/415447/576b5e/6e8274/84998b/9ab0a1/
+    !!!!!!!!!!!!!!!!!!!                    
+
     1. Página Inicial:
     Introdução: Uma mensagem de boas-vindas e uma breve visão geral do ambiente ou tema do restaurante.
     Imagens de Alta Qualidade: Destaque imagens do interior, exterior e pratos exclusivos do restaurante.
@@ -61,10 +65,13 @@
             </div>
         </div>
     </nav>
-
-    <div class="alert alert-light" role="alert">
+    <!-- BOTÃO DE RECEPÇÃO CLIENTE -->
+    <div class="alert alert-light alert-dismissible fade show" role="alert">
         <h5>Ola!</h5>
         <p>Seja muito bem vindo</p>
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+        </button>
     </div>
 
 
