--- a/atividade_08.html
+++ b/atividade_08.html
@@ -13,6 +13,10 @@
     !!!!!!!!!!!!!!!!!!!
 
     !!!!!!!!!!!!!!!!!!!
+    SITE DE REFERENCIA: https://www.palato.com.br/
+    !!!!!!!!!!!!!!!!!!!
+
+    !!!!!!!!!!!!!!!!!!!
     CORES DE REFERENCIA: https://paletadecores.com/paleta/415447/576b5e/6e8274/84998b/9ab0a1/
     !!!!!!!!!!!!!!!!!!!                    
 
@@ -38,7 +42,8 @@
 </head>
 
 <body>
-
+    <div class="page">
+    <img src="logo.png" class="logo">
     <!-- TESTE ESTRUTURA DO LIVRO -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container">
@@ -73,6 +78,31 @@
             <span aria-hidden="true">&times;</span>
         </button>
     </div>
+</div>
+
+        <!-- CAROUSEL MOSTRANDO OS PRATOS DO RESTAURANTE -->
+        <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img class="d-block w-100" src=".../800x400?auto=yes&bg=777&fg=555&text=Primeiro Slide" alt="Primeiro Slide">
+              </div>
+              <div class="carousel-item">
+                <img class="d-block w-100" src=".../800x400?auto=yes&bg=666&fg=444&text=Segundo Slide" alt="Segundo Slide">
+              </div>
+              <div class="carousel-item">
+                <img class="d-block w-100" src=".../800x400?auto=yes&bg=555&fg=333&text=Terceiro Slide" alt="Terceiro Slide">
+              </div>
+            </div>
+            <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="sr-only">Anterior</span>
+            </a>
+            <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="sr-only">Próximo</span>
+            </a>
+          </div>
+
 
 
     <!-- <div class="jumbotron">
